--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>...</title>
+  <title>My First Tiny VUE.js App</title>
 </head>
 
 <body>
